--- a/MC1-DailyTImer/TaskList/TaskList.storyboard
+++ b/MC1-DailyTImer/TaskList/TaskList.storyboard
@@ -41,9 +41,15 @@
                                                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="HighIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Wxa-Rf-Tej">
+                                                    <rect key="frame" x="279" y="12" width="115" height="46"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
+                                            <color key="backgroundColor" red="0.078431372549019607" green="0.15686274509803921" blue="0.31372549019607843" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="priorityImage" destination="Wxa-Rf-Tej" id="bzv-t0-hp7"/>
                                             <outlet property="taskDescLb" destination="NDC-H7-jjm" id="tVe-Xc-eJy"/>
                                             <outlet property="taskNameLb" destination="tgy-FM-6py" id="zjF-Xy-aTA"/>
                                         </connections>
@@ -65,12 +71,13 @@
                                 <rect key="frame" x="20" y="92" width="88" height="43"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.92156862750000001" green="0.81176470590000005" blue="0.69803921570000005" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DqJ-NF-GOc">
                                 <rect key="frame" x="20" y="135" width="182" height="51"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="textColor" red="0.92156862750000001" green="0.81176470590000005" blue="0.69803921570000005" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -133,5 +140,6 @@
     <resources>
         <image name="AddTaskBtn" width="22" height="23"/>
         <image name="EditBtn" width="23" height="26"/>
+        <image name="HighIcon" width="128" height="38"/>
     </resources>
 </document>
